--- a/client/src/app/components/layout/navbar/navbar.component.html
+++ b/client/src/app/components/layout/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark  light-blue lighten-1 ie-nav " [containerInside]="false">
   <mdb-navbar-brand>
-    <a class="logo navbar-brand" [routerLink]="['/']"><strong>Navbar</strong></a>
+    <a class="logo navbar-brand" [routerLink]="['/']"><strong>Наша штука</strong></a>
   </mdb-navbar-brand>
   <links>
     <ul class="navbar-nav mr-auto">
@@ -11,10 +11,10 @@
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item waves-light" (click)="onRegisterClicked()" mdbWavesEffect>
-        <a class="nav-link">Sign up</a>
+        <a class="nav-link">Реєстрація</a>
       </li>
       <li class="nav-item waves-light" (click)="onLoginClicked()" mdbWavesEffect>
-        <a class="nav-link">Sign in</a>
+        <a class="nav-link">Вхід</a>
       </li>
     </ul>
   </links>
@@ -23,14 +23,14 @@
 <div mdbModal #loginModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header"></div>
+      <!-- <div class="modal-header"></div> -->
       <div class="modal-body">
-        <form class="text-center" action="#!">
+        <!-- <form class="text-center" action="#!"> -->
 
-          <p class="h4 mb-4">Sign in</p>
-          <input type="email" class="form-control mb-4" placeholder="E-mail">
+          <p class="h4 mb-4">Вхід</p>
+          <input type="login" [(ngModel)]="login" class="form-control mb-4" placeholder="E-mail" required>
 
-          <input type="password" class="form-control mb-4" placeholder="Password">
+          <input type="password" [(ngModel)]="password" class="form-control mb-4" placeholder="Password" required>
 
           <div class="d-flex justify-content-around">
             <div>
@@ -44,7 +44,7 @@
             </div>
           </div>
 
-          <button class="btn btn-info btn-block my-4" type="submit">Sign in</button>
+          <button class="btn btn-info btn-block my-4" type="submit" (click)="onRegisterConfirm()">Sign in</button>
 
           <p>Not a member?
             <button mdbBtn type="button" color="info" outline="true" (click)="onRegisterClicked()"
@@ -53,15 +53,15 @@
 
           <p>or sign in with:</p>
 
-          <a href="#" class="mx-2" role="button"><i class="fab fa-facebook-f light-blue-text"></i></a>
+          <!-- <a href="#" class="mx-2" role="button"><i class="fab fa-facebook-f light-blue-text"></i></a>
           <a href="#" class="mx-2" role="button"><i class="fab fa-twitter light-blue-text"></i></a>
           <a href="#" class="mx-2" role="button"><i class="fab fa-linkedin-in light-blue-text"></i></a>
-          <a href="#" class="mx-2" role="button"><i class="fab fa-github light-blue-text"></i></a>
+          <a href="#" class="mx-2" role="button"><i class="fab fa-github light-blue-text"></i></a> -->
 
-        </form>
+        <!-- </form> -->
       </div>
-      <div class="modal-footer">
-      </div>
+      <!-- <div class="modal-footer">
+      </div> -->
     </div>
   </div>
 </div>
@@ -72,13 +72,13 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-body">
-        <form class="text-center" action="#!">
+        <!-- <form class="text-center" action="#!"> -->
 
-          <p class="h4 mb-4">Sign up</p>
+          <p class="h4 mb-4">Реєстрація</p>
           <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
 
-          <input type="password" class="form-control mb-4" placeholder="Password">
-          <input type="password" class="form-control mb-4" placeholder="Password2">
+          <input type="password" class="form-control mb-4" placeholder="Пароль">
+          <input type="password" class="form-control mb-4" placeholder="Повторіть пароль">
 
           <div class="d-flex justify-content-around">
             <div>
@@ -92,14 +92,12 @@
           <button class="btn btn-info btn-block my-4" type="submit">Sign up</button>
           <p>or sign in with:</p>
 
-          <a href="#" class="mx-2" role="button"><i class="fab fa-facebook-f light-blue-text"></i></a>
+          <!-- <a href="#" class="mx-2" role="button"><i class="fab fa-facebook-f light-blue-text"></i></a>
           <a href="#" class="mx-2" role="button"><i class="fab fa-twitter light-blue-text"></i></a>
           <a href="#" class="mx-2" role="button"><i class="fab fa-linkedin-in light-blue-text"></i></a>
-          <a href="#" class="mx-2" role="button"><i class="fab fa-github light-blue-text"></i></a>
+          <a href="#" class="mx-2" role="button"><i class="fab fa-github light-blue-text"></i></a> -->
 
-        </form>
-      </div>
-      <div class="modal-footer">
+        <!-- </form> -->
       </div>
     </div>
   </div>
