--- a/client/src/app/components/main/main.component.html
+++ b/client/src/app/components/main/main.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-3">
-      <button mdbBtn color="primary" block="true" class="waves-light mt-1 mb-1" type="button" (click)="test.toggle()" mdbWavesEffect>
+      <button mdbBtn color="primary" block="true" class="waves-light mt-1 mb-1" type="button" (click)="test.toggle()"
+        mdbWavesEffect>
         Фільтри
       </button>
 
@@ -11,26 +12,61 @@
       </div>
     </div>
     <div class="col-lg-9">
-      <mdb-card style="background-image: url('https://mdbootstrap.com/img/Photos/Horizontal/City/6-col/img%20(47).jpg')"
-        class="card-image mb-3 mx-2">
-        <div class="text-white  align-items-center rgba-indigo-strong py-5 px-4">
-          <div>
-            <h5 class="orange-text">
-              <mdb-icon fas icon="desktop"></mdb-icon>
-              Software
-            </h5>
-            <h3 class="card-title pt-2"><strong>This is card title</strong></h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem, optio
-              vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos. Odit sed qui,
-              dolorum!.
-            </p>
-            <a mdbBtn color="deep-orange" class="waves-light" mdbWavesEffect>
-              <mdb-icon far icon="clone" class="left"></mdb-icon>
-              View project
-            </a>
+      <mdb-card class="mb-2 mt-4" class="event-card">
+        <!-- <mdb-card-header>Title</mdb-card-header> -->
+        <mdb-card-body>
+          <div class="row">
+
+            <div class="col-lg-8 col-md-10 col-sm-10">
+              <mdb-card-title>
+                <h5>Special title treatment</h5>
+              </mdb-card-title>
+              <mdb-card-text>With supporting text below as a natural lead-in to additional content. as a natural lead-in to additional content as a natural lead-in to additional content as a natural lead-in to additional content as a natural lead-in to additional content as a natural lead-in to additional content as a natural lead-in to additional content </mdb-card-text>
+            </div>
+            <div class="col-lg-1 col-md-1 col-sm-1 counter">
+              <div class="row">
+                <mdb-icon fas icon="caret-up" size="2x" class="green-text"></mdb-icon>
+              </div>
+              <div class="row" style="padding-left: 18%;">
+                  5
+              </div>
+              <div class="row">
+                <mdb-icon fas icon="caret-down" size="2x" class="red-text"></mdb-icon>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-12 col-sm-12">
+              <p>Найбільші спонсори</p>
+              <ul class="list-group">
+                <li class="list-group-item list-group-item-action waves-light">Cras justo odio</li>
+                <li class="list-group-item list-group-item-action waves-light">Dapibus ac facilisis in</li>
+              </ul>
+            </div>
           </div>
-        </div>
+          <!-- <div class="text-right">
+            <a href="" mdbBtn color="primary">Підтримати</a>
+          </div> -->
+        </mdb-card-body>
+        <mdb-card-footer class="text-muted">
+          <div class="row">
+            <div class="col-8">
+              <address>
+                <mdb-icon fas icon="map-marker-alt"></mdb-icon> Дарницький р-н, Малевича 34
+              </address>
+            </div>
+            <div class="col text-right">
+              <time>
+                <div class="row">
+                  <div class="col">
+                    <mdb-icon fas icon="clock"></mdb-icon>19-30
+                  </div>
+                  <div class="col">
+                    <mdb-icon far icon="calendar-alt"></mdb-icon> 25 квітня
+                  </div>
+                </div>
+              </time>
+            </div>
+          </div>
+        </mdb-card-footer>
       </mdb-card>
     </div>
   </div>
