--- a/client/src/app/components/main/main.component.html
+++ b/client/src/app/components/main/main.component.html
@@ -1,16 +1,32 @@
 <div class="container">
-    <div class="row">
+    <div class="row mt-1">
         <div class="col-lg-3">
             <button mdbBtn color="primary" block="true" class="waves-light mt-1 mb-1" type="button" (click)="test.toggle()" mdbWavesEffect>
         Фільтри
       </button>
+            <div class="container">
+                <div style="border: 1px;" class="row" mdbCollapse #test="bs-collapse">
+                    <button mdbBtn color="primary" block="true" class="waves-light mt-1 mb-1" type="button" (click)="region.toggle()" mdbWavesEffect>
+            Регіони
+          </button>
 
-            <div class="" mdbCollapse #test="bs-collapse">
-                <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
+                    <div class="" mdbCollapse #region="bs-collapse">
+                        <mdb-checkbox [checked]="true" [default]="true">Голосіївський</mdb-checkbox>
+                        <mdb-checkbox [checked]="true" [default]="true">Дарницький</mdb-checkbox>
+                        <mdb-checkbox [checked]="true" [default]="true">Деснянський</mdb-checkbox>
+                        <mdb-checkbox [checked]="true" [default]="true">Дніпровський</mdb-checkbox>
+                        <mdb-checkbox [checked]="true" [default]="true">Оболонський</mdb-checkbox>
+                        <mdb-checkbox [checked]="true" [default]="true">Печерський</mdb-checkbox>
+                        <mdb-checkbox [checked]="true" [default]="true">Подільський</mdb-checkbox>
+                        <mdb-checkbox [checked]="true" [default]="true">Святошинський</mdb-checkbox>
+                        <mdb-checkbox [checked]="true" [default]="true">Солом'янський</mdb-checkbox>
+                        <mdb-checkbox [checked]="true" [default]="true">Шевченківський</mdb-checkbox>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-lg-9">
-            <mdb-card class="mb-2 mt-4" class="event-card">
+            <mdb-card class="mb-1 event-card">
                 <!-- <mdb-card-header>Title</mdb-card-header> -->
                 <mdb-card-body>
                     <div class="row">
@@ -20,7 +36,8 @@
                                 <h5>Special title treatment</h5>
                             </mdb-card-title>
                             <mdb-card-text>With supporting text below as a natural lead-in to additional content. as a natural lead-in to additional content as a natural lead-in to additional content as a natural lead-in to additional content as a natural lead-in to
-                                additional content as a natural lead-in to additional content as a natural lead-in to additional content </mdb-card-text>
+                                additional content as a natural lead-in to additional content as a natural lead-in to additional content
+                            </mdb-card-text>
                         </div>
                         <div class="col-lg-1 col-md-1 col-sm-1 counter">
                             <div class="row">
@@ -42,8 +59,8 @@
                         </div>
                     </div>
                     <!-- <div class="text-right">
-            <a href="" mdbBtn color="primary">Підтримати</a>
-          </div> -->
+              <a href="" mdbBtn color="primary">Підтримати</a>
+            </div> -->
                 </mdb-card-body>
                 <mdb-card-footer class="text-muted">
                     <div class="row">
@@ -63,17 +80,10 @@
                   </div>
                 </div>
               </time>
-                            <<<<<<< HEAD </div>
                         </div>
+                    </div>
                 </mdb-card-footer>
             </mdb-card>
-            </div>
         </div>
-        =======
     </div>
 </div>
-</mdb-card-footer>
-</mdb-card>
-</div>
-</div>
->>>>>>> 835a2583c0998d73058fb549a0b68d33a0a244d1
