--- a/client/src/app/components/layout/navbar/navbar.component.html
+++ b/client/src/app/components/layout/navbar/navbar.component.html
@@ -1,88 +1,90 @@
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark  light-blue lighten-1 ie-nav " [containerInside]="false">
-  <mdb-navbar-brand>
-    <a class="logo navbar-brand" [routerLink]="['/']"><strong>Наша штука</strong></a>
-  </mdb-navbar-brand>
-  <links>
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item  {{link.active ? 'active' : ''}} waves-light" *ngFor="let link of links" mdbWavesEffect>
-        <a class="nav-link"  (click)="onLinkClicked(link)" [routerLink]="link.path">{{link.label}}
+    <mdb-navbar-brand>
+        <a class="logo navbar-brand" [routerLink]="['/']"><strong>Наша штука</strong></a>
+    </mdb-navbar-brand>
+    <links>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item  {{link.active ? 'active' : ''}} waves-light" *ngFor="let link of links" mdbWavesEffect>
+                <a class="nav-link" (click)="onLinkClicked(link)" [routerLink]="link.path">{{link.label}}
         </a>
-      </li>
-    </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item waves-light" (click)="onRegisterClicked()" mdbWavesEffect>
-        <a class="nav-link">Реєстрація</a>
-      </li>
-      <li class="nav-item waves-light" (click)="onLoginClicked()" mdbWavesEffect>
-        <a class="nav-link">Вхід</a>
-      </li>
-    </ul>
-  </links>
+            </li>
+            <li class="nav-item waves-light" mdbWavesEffect>
+                <a class="nav-link" (click)="onEventCreatingClicked()"><b> Створити Подію<mdb-icon fas icon="plus">
+            </mdb-icon></b></a>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item waves-light" (click)="onRegisterClicked()" mdbWavesEffect>
+                <a class="nav-link">Реєстрація</a>
+            </li>
+            <li class="nav-item waves-light" (click)="onLoginClicked()" mdbWavesEffect>
+                <a class="nav-link">Вхід</a>
+            </li>
+        </ul>
+    </links>
 </mdb-navbar>
 
 <div mdbModal #loginModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <!-- <div class="modal-header"></div> -->
-      <div class="modal-body">
-        <!-- <form class="text-center" action="#!"> -->
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <!-- <div class="modal-header"></div> -->
+            <div class="modal-body">
+                <!-- <form class="text-center" action="#!"> -->
 
-          <p class="h4 mb-4">Вхід</p>
-          <input type="login" [(ngModel)]="login" class="form-control mb-4" placeholder="Логін" required>
+                <p class="h4 mb-4">Вхід</p>
+                <input type="login" [(ngModel)]="login" class="form-control mb-4" placeholder="Логін" required>
 
-          <input type="password" [(ngModel)]="password" class="form-control mb-4" placeholder="Password" required>
+                <input type="password" [(ngModel)]="password" class="form-control mb-4" placeholder="Password" required>
 
-          <div class="d-flex justify-content-around">
-            <div>
-              <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input">
-                <label class="custom-control-label">Remember me</label>
-              </div>
-            </div>
-            <div>
-              <a href="">Забули пароль?</a>
-            </div>
-          </div>
+                <div class="d-flex justify-content-around">
+                    <div>
+                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input">
+                            <label class="custom-control-label">Remember me</label>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="">Забули пароль?</a>
+                    </div>
+                </div>
 
-          <button class="btn btn-info btn-block my-4" type="submit" (click)="onLoginConfirm()">Увійти</button>
+                <button class="btn btn-info btn-block my-4" type="submit" (click)="onLoginConfirm()">Увійти</button>
 
-          <div class="d-flex justify-content-around">
-            <p>Не маєте аккаунту?
-              <button mdbBtn type="button" color="info" outline="true" (click)="onRegisterClicked()"
-                mdbWavesEffect>Зареєструватися</button>
-            </p>
-          </div>
+                <div class="d-flex justify-content-around">
+                    <p>Не маєте аккаунту?
+                        <button mdbBtn type="button" color="info" outline="true" (click)="onRegisterClicked()" mdbWavesEffect>Зареєструватися</button>
+                    </p>
+                </div>
 
-          <!-- <a href="#" class="mx-2" role="button"><i class="fab fa-facebook-f light-blue-text"></i></a>
+                <!-- <a href="#" class="mx-2" role="button"><i class="fab fa-facebook-f light-blue-text"></i></a>
           <a href="#" class="mx-2" role="button"><i class="fab fa-twitter light-blue-text"></i></a>
           <a href="#" class="mx-2" role="button"><i class="fab fa-linkedin-in light-blue-text"></i></a>
           <a href="#" class="mx-2" role="button"><i class="fab fa-github light-blue-text"></i></a> -->
 
-        <!-- </form> -->
-      </div>
-      <!-- <div class="modal-footer">
+                <!-- </form> -->
+            </div>
+            <!-- <div class="modal-footer">
       </div> -->
+        </div>
     </div>
-  </div>
 </div>
 
 
-<div mdbModal #registerModal="mdbModal" class="modal fade" tabindex="-1" role="dialog"
-  aria-labelledby="myBasicModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-body">
-        <!-- <form class="text-center" action="#!"> -->
+<div mdbModal #registerModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <!-- <form class="text-center" action="#!"> -->
 
-          <p class="h4 mb-4">Реєстрація</p>
-          <!-- <div class="md-form"> -->
-            <input type="login" [(ngModel)]="login" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="Логін">
-            <input type="password"  [(ngModel)]="password" class="form-control mb-4" placeholder="Пароль">
-            <input type="password"  [(ngModel)]="passwordRepeat" class="form-control mb-4" id="passwordRepeat" placeholder="Повторіть пароль">
-            <small *ngIf="passwordRepeat !== password">Паролі відрізняються</small>
-          <!-- </div> -->
+                <p class="h4 mb-4">Реєстрація</p>
+                <!-- <div class="md-form"> -->
+                <input type="login" [(ngModel)]="login" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="Логін">
+                <input type="password" [(ngModel)]="password" class="form-control mb-4" placeholder="Пароль">
+                <input type="password" [(ngModel)]="passwordRepeat" class="form-control mb-4" id="passwordRepeat" placeholder="Повторіть пароль">
+                <small *ngIf="passwordRepeat !== password">Паролі відрізняються</small>
+                <!-- </div> -->
 
-          <!-- <div class="d-flex justify-content-around">
+                <!-- <div class="d-flex justify-content-around">
             <div>
               <div class="custom-control custom-checkbox">
                 <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
@@ -91,15 +93,54 @@
             </div>
           </div> -->
 
-          <button class="btn btn-info btn-block my-4" (click)="onRegisterConfirm()" type="submit" [disabled]="passwordRepeat !== password">Зареєструватися</button>
+                <button class="btn btn-info btn-block my-4" (click)="onRegisterConfirm()" type="submit" [disabled]="passwordRepeat !== password">Зареєструватися</button>
 
-          <!-- <a href="#" class="mx-2" role="button"><i class="fab fa-facebook-f light-blue-text"></i></a>
+                <!-- <a href="#" class="mx-2" role="button"><i class="fab fa-facebook-f light-blue-text"></i></a>
           <a href="#" class="mx-2" role="button"><i class="fab fa-twitter light-blue-text"></i></a>
           <a href="#" class="mx-2" role="button"><i class="fab fa-linkedin-in light-blue-text"></i></a>
           <a href="#" class="mx-2" role="button"><i class="fab fa-github light-blue-text"></i></a> -->
 
-        <!-- </form> -->
-      </div>
+                <!-- </form> -->
+            </div>
+        </div>
     </div>
-  </div>
 </div>
+
+<form [formGroup]="form" (ngSubmit)="onEventSubmit()">
+    <div mdbModal #event="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel" aria-hidden="true">
+
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <h4 class="modal-title w-100 font-weight-bold">Створення події:</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="eventModal.hide()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+                </div>
+                <div class="modal-body mx-3">
+                    <div class="md-form mb-5">
+                        <mdb-icon fas icon="user" class="prefix grey-text"></mdb-icon>
+                        <input type="text" id="orangeForm-name" class="form-control" [formControl]="" mdbInput mdbValidate>
+                        <label for="orangeForm-name">Your name</label>
+                    </div>
+                    <div class="md-form mb-5">
+                        <mdb-icon fas icon="envelope" class="prefix grey-text"></mdb-icon>
+                        <input type="email" id="orangeForm-email" class="form-control" [formControl]="" mdbInput mdbValidate>
+                        <label for="orangeForm-email">Your email</label>
+                    </div>
+
+                    <div class="md-form mb-4">
+                        <mdb-icon fas icon="lock" class="prefix grey-text"></mdb-icon>
+                        <input type="password" id="orangeForm-pass" class="form-control" [formControl]="" mdbInput mdbValidate>
+                        <label for="orangeForm-pass">Your password</label>
+                    </div>
+
+                </div>
+                <div class="modal-footer d-flex justify-content-center">
+                    <button mdbBtn color="deep-orange " type="submit" class="waves-light" mdbWavesEffect>Підтвердити</button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</form>
