--- a/client/src/app/components/main/main.component.html
+++ b/client/src/app/components/main/main.component.html
@@ -1,76 +1,80 @@
 <div class="container">
-    <div class="row mt-1">
-        <div class="col-lg-3">
-            <button mdbBtn color="primary" block="true" class="waves-light mt-1 mb-1" type="button" (click)="test.toggle()" mdbWavesEffect>
+  <div class="row mt-1">
+    <div class="col-lg-3">
+      <button mdbBtn color="primary" block="true" class="waves-light mt-1 mb-1" type="button" (click)="test.toggle()"
+        mdbWavesEffect>
         Фільтри
       </button>
-            <div class="container">
-                <div class="row" mdbCollapse #test="bs-collapse" style="width: 80%;">
-                    <button mdbBtn color="primary" block="true" class="waves-light" type="button" (click)="region.toggle()" mdbWavesEffect>
+      <div class="container">
+        <div class="row" mdbCollapse #test="bs-collapse" style="width: 80%;">
+          <button mdbBtn color="primary" block="true" class="waves-light ml-0" type="button" (click)="region.toggle()"
+            mdbWavesEffect>
             Регіони
           </button>
 
-                    <div class="" mdbCollapse #region="bs-collapse">
-                        <mdb-checkbox [checked]="true" [default]="true">Голосіївський</mdb-checkbox>
-                        <mdb-checkbox [checked]="true" [default]="true">Дарницький</mdb-checkbox>
-                        <mdb-checkbox [checked]="true" [default]="true">Деснянський</mdb-checkbox>
-                        <mdb-checkbox [checked]="true" [default]="true">Дніпровський</mdb-checkbox>
-                        <mdb-checkbox [checked]="true" [default]="true">Оболонський</mdb-checkbox>
-                        <mdb-checkbox [checked]="true" [default]="true">Печерський</mdb-checkbox>
-                        <mdb-checkbox [checked]="true" [default]="true">Подільський</mdb-checkbox>
-                        <mdb-checkbox [checked]="true" [default]="true">Святошинський</mdb-checkbox>
-                        <mdb-checkbox [checked]="true" [default]="true">Солом'янський</mdb-checkbox>
-                        <mdb-checkbox [checked]="true" [default]="true">Шевченківський</mdb-checkbox>
-                    </div>
-                </div>
-            </div>
+          <div class="" mdbCollapse #region="bs-collapse">
+            <mdb-checkbox [checked]="true" [default]="true">Голосіївський</mdb-checkbox>
+            <mdb-checkbox [checked]="true" [default]="true">Дарницький</mdb-checkbox>
+            <mdb-checkbox [checked]="true" [default]="true">Деснянський</mdb-checkbox>
+            <mdb-checkbox [checked]="true" [default]="true">Дніпровський</mdb-checkbox>
+            <mdb-checkbox [checked]="true" [default]="true">Оболонський</mdb-checkbox>
+            <mdb-checkbox [checked]="true" [default]="true">Печерський</mdb-checkbox>
+            <mdb-checkbox [checked]="true" [default]="true">Подільський</mdb-checkbox>
+            <mdb-checkbox [checked]="true" [default]="true">Святошинський</mdb-checkbox>
+            <mdb-checkbox [checked]="true" [default]="true">Солом'янський</mdb-checkbox>
+            <mdb-checkbox [checked]="true" [default]="true">Шевченківський</mdb-checkbox>
+          </div>
         </div>
-        <div class="col-lg-9">
-            <mdb-card class="mb-1 event-card">
-                <!-- <mdb-card-header>Title</mdb-card-header> -->
-                <mdb-card-body>
-                    <div class="row">
+      </div>
+    </div>
+    <div class="col-lg-9">
+      <mdb-card class="mb-1 event-card">
+        <!-- <mdb-card-header>Title</mdb-card-header> -->
+        <mdb-card-body>
+          <div class="row">
 
-                        <div class="col-lg-8 col-md-10 col-sm-10">
-                            <mdb-card-title>
-                                <h5>Special title treatment</h5>
-                            </mdb-card-title>
-                            <mdb-card-text>With supporting text below as a natural lead-in to additional content. as a natural lead-in to additional content as a natural lead-in to additional content as a natural lead-in to additional content as a natural lead-in to
-                                additional content as a natural lead-in to additional content as a natural lead-in to additional content
-                            </mdb-card-text>
-                        </div>
-                        <div class="col-lg-1 col-md-1 col-sm-1 counter">
-                            <div class="row">
-                                <mdb-icon fas icon="caret-up" size="2x" class="green-text"></mdb-icon>
-                            </div>
-                            <div class="row" style="padding-left: 18%;">
-                                5
-                            </div>
-                            <div class="row">
-                                <mdb-icon fas icon="caret-down" size="2x" class="red-text"></mdb-icon>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-12 col-sm-12">
-                            <p>Топ спонсори</p>
-                            <ul class="list-group">
-                                <li class="list-group-item list-group-item-action waves-light">Cras justo odio</li>
-                                <li class="list-group-item list-group-item-action waves-light">Dapibus ac facilisis in</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- <div class="text-right">
+            <div class="col-lg-8 col-md-10 col-sm-10">
+              <mdb-card-title>
+                <h5>Special title treatment</h5>
+              </mdb-card-title>
+              <mdb-card-text>With supporting text below as a natural lead-in to additional content. as a natural lead-in
+                to additional content as a natural lead-in to additional content as a natural lead-in to additional
+                content as a natural lead-in to
+                additional content as a natural lead-in to additional content as a natural lead-in to additional content
+              </mdb-card-text>
+            </div>
+            <div class="col-lg-1 col-md-1 col-sm-1 counter">
+              <div class="row">
+                <mdb-icon fas icon="caret-up" size="2x" class="green-text"></mdb-icon>
+              </div>
+              <div class="row" style="padding-left: 18%;">
+                5
+              </div>
+              <div class="row">
+                <mdb-icon fas icon="caret-down" size="2x" class="red-text"></mdb-icon>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-12 col-sm-12">
+              <p>Топ спонсори</p>
+              <ul class="list-group">
+                <li class="list-group-item list-group-item-action waves-light">Cras justo odio</li>
+                <li class="list-group-item list-group-item-action waves-light">Dapibus ac facilisis in</li>
+              </ul>
+            </div>
+          </div>
+          <!-- <div class="text-right">
             <a href="" mdbBtn color="primary">Підтримати</a>
           </div> -->
-                </mdb-card-body>
-                <mdb-card-footer class="text-muted">
-                    <div class="row">
-                        <div class="col-8">
-                            <address>
+        </mdb-card-body>
+        <mdb-card-footer class="text-muted">
+          <div class="row">
+            <div class="col-8">
+              <address>
                 <mdb-icon fas icon="map-marker-alt"></mdb-icon> Дарницький р-н, Малевича 34
               </address>
-                        </div>
-                        <div class="col text-right">
-                            <time>
+            </div>
+            <div class="col text-right">
+              <time>
                 <div class="row">
                   <div class="col">
                     <mdb-icon fas icon="clock"></mdb-icon>19-30
@@ -80,10 +84,10 @@
                   </div>
                 </div>
               </time>
-                        </div>
-                    </div>
-                </mdb-card-footer>
-            </mdb-card>
-        </div>
+            </div>
+          </div>
+        </mdb-card-footer>
+      </mdb-card>
     </div>
+  </div>
 </div>
