register and login done

--- a/client/src/app/components/layout/navbar/navbar.component.html
+++ b/client/src/app/components/layout/navbar/navbar.component.html
@@ -14,12 +14,23 @@
       </li>
     </ul>
     <ul class="navbar-nav">
-      <li class="nav-item waves-light" (click)="onRegisterClicked()" mdbWavesEffect>
-        <a class="nav-link">Реєстрація</a>
-      </li>
-      <li class="nav-item waves-light" (click)="onLoginClicked()" mdbWavesEffect>
-        <a class="nav-link">Вхід</a>
-      </li>
+      <ng-container *ngIf="authService.isAuthenticated; else elseTemplate">
+        <li class="nav-item waves-light" mdbWavesEffect>
+          <a class="nav-link">Мій профіль</a>
+        </li>
+        <li class="nav-item waves-light" (click)="authService.logout()" mdbWavesEffect>
+          <a class="nav-link">Вихід</a>
+        </li>
+      </ng-container>
+      <ng-template #elseTemplate>
+        <li class="nav-item waves-light" (click)="onRegisterClicked()" mdbWavesEffect>
+          <a class="nav-link">Реєстрація</a>
+        </li>
+        <li class="nav-item waves-light" (click)="onLoginClicked()" mdbWavesEffect>
+          <a class="nav-link">Вхід</a>
+        </li>
+      </ng-template>
+
     </ul>
   </links>
 </mdb-navbar>
@@ -137,17 +148,16 @@
           </div>
 
           <div class="md-form mb-5">
-            <textarea id="bio" class="md-textarea md-textarea-auto form-control" formControlName="bio" mdbInput></textarea>
+            <textarea id="bio" class="md-textarea md-textarea-auto form-control" formControlName="bio"
+              mdbInput></textarea>
             <label for="bio">Опис події</label>
           </div>
 
         </div>
         <div class="modal-footer d-flex justify-content-center">
-            <button mdbBtn color="deep-orange " type="submit" class="waves-light" mdbWavesEffect>Підтвердити</button>
+          <button mdbBtn color="deep-orange " type="submit" class="waves-light" mdbWavesEffect>Підтвердити</button>
         </div>
       </div>
-      </div>
-    <!-- </div> -->
-
-    </form>
+    </div>
+  </form>
 </div>
