--- a/client/src/app/components/event/event.component.html
+++ b/client/src/app/components/event/event.component.html
@@ -1,16 +1,15 @@
 <div class="container">
   <section>
     <div class="row">
-      <div class="jumbotron">
+      <div class="jumbotron" style="width: 100%;">
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="display-4">Event title</h2>
-            <p class="lead">Some quick example text to build on the card title and make up the bulk of the card's
-              content.
+            <h2 class="display-4">{{event.name}}</h2>
+            <p class="lead">{{event.bio}}
             </p>
             <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.
+            <p>
             </p>
           </div>
           <div class="col-lg-4">
@@ -20,7 +19,7 @@
                   <mdb-icon fas icon="caret-up" size="3x" class="green-text"></mdb-icon>
                 </div>
                 <div class="row" style="padding-left: 50%; font-size: 1.4em;">
-                  5
+                  {{event.vote}}
                 </div>
                 <div class="row">
                   <mdb-icon fas icon="caret-down" size="3x" class="red-text"></mdb-icon>
@@ -29,8 +28,7 @@
               <div class="col">
                 <p>Топ спонсори</p>
                 <ul class="list-group">
-                  <li class="list-group-item list-group-item-action waves-light">Cras justo odio</li>
-                  <li class="list-group-item list-group-item-action waves-light">Dapibus ac facilisis in</li>
+                  <li class="list-group-item list-group-item-action waves-light" *ngFor="let sponsor of event.sponsors">{{sponsor.user.login || 'no sponsor'}}</li>
                 </ul>
               </div>
             </div>
@@ -42,7 +40,7 @@
         <div class="author">
           <p>Автор:
             <a href="#">
-              <p>Вася пупкин</p>
+              <p>{{event.author}}</p>
             </a>
           </p>
         </div>
