--- a/client/src/app/components/event/event.component.html
+++ b/client/src/app/components/event/event.component.html
@@ -32,8 +32,9 @@
                 </ul>
               </div>
             </div>
-            <div class="row d-flex justify-content-around">
-              <button type="button" mdbBtn color="success" class="mt-5" mdbWavesEffect>Пілписатися</button>
+            <div class="row d-flex mt-5 justify-content-around">
+              <button type="button" mdbBtn color="success" mdbWavesEffect>Пілписатися</button>
+                <button mdbBtn type="button" color="info" outline="true" mdbWavesEffect>Донат</button>
             </div>
           </div>
         </div>
@@ -43,6 +44,9 @@
               <p>{{event.author}}</p>
             </a>
           </p>
+        </div>
+        <div class="report">
+          <button mdbBtn type="button" color="warning" outline="true" mdbWavesEffect>Залишити скаргу</button>
         </div>
       </div>
     </div>
