--- a/client/src/app/components/layout/navbar/navbar.component.html
+++ b/client/src/app/components/layout/navbar/navbar.component.html
@@ -137,17 +137,20 @@
         </div>
         <div class="modal-body mx-3">
           <div class="md-form mb-5">
-            <input type="text" id="name" class="form-control" formControlName="name" mdbInput>
+            <input type="text" id="name" class="form-control" [(ngModel)]="newName" formControlName="name" mdbInput>
             <label for="name">Назва події</label>
           </div>
 
           <div class="md-form mb-4">
-            <input type="date" id="date" class="form-control" formControlName="date" mdbInput>
+            <input type="date" id="date" class="form-control" [(ngModel)]="newDate" formControlName="date" mdbInput>
             <label for="date">Дата</label>
           </div>
-
+          <div class="md-form mb-4">
+            <input type="time" id="date" class="form-control" [(ngModel)]="newTime" formControlName="clock" mdbInput>
+            <label for="date">Дата</label>
+          </div>
           <div class="md-form mb-5">
-            <textarea id="bio" class="md-textarea md-textarea-auto form-control" formControlName="bio"
+            <textarea id="bio" class="md-textarea md-textarea-auto form-control" [(ngModel)]="newBio" formControlName="bio"
               mdbInput></textarea>
             <label for="bio">Опис події</label>
           </div>
